# KasperskyOS_ARCS-Dev

./: .gitignore  Dockerfile  README.md  StartDocker.txt  start.sh
server/: CMakeLists.txt  cross-build.sh  cross-build.sh~
server/src/: server.c  server.cpp
shared/: rpi4_prepare_fs_image_rev1.2.sh  start.sh
shared/GPIO_TCP/: CMakeLists.txt  cross-build.sh  image-build.sh
shared/GPIO_TCP/einit/: CMakeLists.txt
shared/GPIO_TCP/einit/src/: init.yaml.in  security.psl
shared/GPIO_TCP/server/: CMakeLists.txt
shared/GPIO_TCP/server/src/: server.cpp
shared/GPIO_TCP/vfs/: CMakeLists.txt
shared/GPIO_TCP/vfs/src/: net_vfs.c
